@@ -25,6 +25,7 @@ libxmlwrapp_la_SOURCES = \
 		libxml/node_iterator.h \
 		libxml/node_manip.cxx \
 		libxml/node_manip.h \
+		libxml/pimpl_base.h \
 		libxml/tree_parser.cxx \
 		libxml/utility.cxx \
 		libxml/utility.h
